fix overflow + main

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -58,6 +58,10 @@ body {
   }
 }
 
+.page {
+  overflow: hidden;
+}
+
 .section {
   padding-top: 16px;
 
